[gd_scene load_steps=5 format=2]

[ext_resource path="res://images/marcaV.png" type="Texture" id=1]
[ext_resource path="res://luzVerm.gd" type="Script" id=2]
[ext_resource path="res://sons/m2mobi__click.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 1.0

[node name="luzVerm" type="Node2D"]
script = ExtResource( 2 )

[node name="MarcaV" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
z_index = 5
texture = ExtResource( 1 )

[node name="FotonVerm" type="CPUParticles2D" parent="."]
amount = 500
lifetime = 8.0
explosiveness = 1.0
lifetime_randomness = 0.11
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
scale_amount = 5.0
color = Color( 1, 0, 0, 1 )

[node name="plimFx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="ColVerm" type="Area2D" parent="."]

[node name="ShapV" type="CollisionShape2D" parent="ColVerm"]
shape = SubResource( 1 )
